--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,7 +5,7 @@
 .container{
 display:flex;
 flex-wrap: wrap;
-flex-direction: column;
-height:280px;
+justify-content: flex-end;
+justify-content: space-between;
 }
 
