--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -6,11 +6,17 @@
 display:flex;
 flex-wrap: wrap;
 justify-content: space-around;
+flex-direction: row;
+
 
 }
+.item{
+    flex-grow: 1;
+}
 .item-2{
-    margin-right:auto;
+/*    margin-right: 0 auto;*/
     order: 1;
+    flex-grow: 2;
 }
 .item-6{
     order: -1;
