--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,22 +5,18 @@
 .container{
 display:flex;
 flex-wrap: wrap;
-justify-content: space-around;
-flex-direction: row;
-
+height: 300px;
 
 }
+
 .item{
-    flex-grow: 1;
+flex-basis: 200px;
+flex-grow: 1;
 }
-.item-2{
-/*    margin-right: 0 auto;*/
-    order: 1;
-    flex-grow: 2;
+
+.item{
+/*short hand for flex grow and flex-basis property*/
+flex: 1 200px;
 }
-.item-6{
-    order: -1;
-}
-.item-3{
-    order: 2;
-}
+
+
